--- a/1 Apa itu CSS Grid/index.html
+++ b/1 Apa itu CSS Grid/index.html
@@ -7,10 +7,16 @@
     <title>Grid</title>
 </head>
 <body>
-    <header>Header</header>
-    <aside>Aside</aside>
-    <nav>Nav</nav>
-    <main>Main</main>
-    <footer>Footer</footer>
+    <div class="container">
+        <header>Header</header>
+        <div class="content">
+            <div class="sidebar">
+                <aside>Aside</aside>
+                <nav>Nav</nav>
+            </div>
+            <main>Main</main>
+        </div>
+        <footer>Footer</footer>
+    </div>
 </body>
 </html>
