--- a/1 Apa itu CSS Grid/index.html
+++ b/1 Apa itu CSS Grid/index.html
@@ -3,19 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleflex.css">
-    <title>Flex Box</title>
+    <link rel="stylesheet" href="stylegrid.css">
+    <title>Grid</title>
 </head>
 <body>
     <div class="container">
         <header>Header</header>
-        <div class="content">
-            <div class="sidebar">
-                <aside>Aside</aside>
-                <nav>Nav</nav>
-            </div>
-            <main>Main</main>
-        </div>
+        <aside>Aside</aside>
+        <nav>Nav</nav>
+        <main>Main</main>
         <footer>Footer</footer>
     </div>
 </body>
