--- a/3 Columns dan Rows/index.html
+++ b/3 Columns dan Rows/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Columns dan Rows</title>
+    <title>Explicit & Implicit Grid</title>
 </head>
 <body>
     <div class="container">
