--- a/4 Spesial Keyword dan Functions/index.html
+++ b/4 Spesial Keyword dan Functions/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Spesial Keyword dan Functions</title>
+    <title>Min & Max Content</title>
 </head>
 <body>
     <div class="container">
@@ -12,7 +12,7 @@
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
-        <div class="item">5</div>
+        <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, molestiae!</div>
         <div class="item">6</div>
         <div class="item">7</div>
         <div class="item">8</div>
