--- a/4 Spesial Keyword dan Functions/index.html
+++ b/4 Spesial Keyword dan Functions/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Min & Max Content</title>
+    <title>Auto Fit & Auto Fill</title>
 </head>
 <body>
     <div class="container">
         <div class="item">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, molestiae!</div>
+        <!-- <div class="item">4</div>
+        <div class="item">5</div>
         <div class="item">6</div>
         <div class="item">7</div>
         <div class="item">8</div>
-        <div class="item">9</div>
+        <div class="item">9</div> -->
     </div>
 </body>
 </html>
