--- a/4 Spesial Keyword dan Functions/index.html
+++ b/4 Spesial Keyword dan Functions/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Auto Fit & Auto Fill</title>
+    <title>Min Max</title>
 </head>
 <body>
     <div class="container">
-        <div class="item">1</div>
+        <div class="item">Randi</div>
         <div class="item">2</div>
-        <div class="item">3</div>
+        <div class="item">Febriadi</div>
         <!-- <div class="item">4</div>
         <div class="item">5</div>
         <div class="item">6</div>
