--- a/6 Grid Alignment/index.html
+++ b/6 Grid Alignment/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="items i1">1</div>
-        <div class="items i2">2</div>
-        <div class="items i3">3</div>
-        <div class="items i4">4</div>
-        <div class="items i5">5</div>
-        <div class="items i6">6</div>
-        <div class="items i7">7</div>
-        <div class="items i8">8</div>
-        <div class="items i9">9</div>
+        <div class="items">1</div>
+        <div class="items">2</div>
+        <div class="items">3</div>
+        <div class="items">4</div>
+        <div class="items">5</div>
+        <div class="items">6</div>
+        <div class="items">7</div>
+        <div class="items">8</div>
+        <div class="items">9</div>
     </div>
 </body>
 </html>
