--- a/7 Grid Item Properties/index.html
+++ b/7 Grid Item Properties/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="item my-item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
-        <div class="item">6</div>
+        <div class="item header">1</div>
+        <div class="item sidebar">2</div>
+        <div class="item content">3</div>
+        <div class="item footer">4</div>
+        <!-- <div class="item">5</div>
+        <div class="item">6</div> -->
         <!-- <div class="item">7</div>
         <div class="item">8</div>
         <div class="item">9</div> -->
