--- a/7 Grid Item Properties/index.html
+++ b/7 Grid Item Properties/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="item header">1</div>
-        <div class="item sidebar">2</div>
-        <div class="item content">3</div>
-        <div class="item footer">4</div>
+        <div class="item my-item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
         <!-- <div class="item">5</div>
         <div class="item">6</div> -->
         <!-- <div class="item">7</div>
